--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Digital Storage Convertor",
   "main": "byteMe.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Trekklog/trekkbyte.git"
   },
   "keywords": [
     "digital",
@@ -14,5 +15,9 @@
     "bits"
   ],
   "author": "Trekkspace",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Trekklog/trekkbyte/issues"
+  },
+  "homepage": "https://github.com/Trekklog/trekkbyte"
 }
